@@ -1,5 +1,6 @@
 08 Aug 2003 mipsator
  * rewritten parse_cell() in the same spirit as parse_opt().
+ * modified parse_cell() and parse() to parse new and old format of pmkfile.
 
 07 Aug 2003 mipsator
  * rewritten parse_opt().
